Changed how encryption is done. Corrected the basic h2 url so that h2-console can connect to it.